[gd_scene load_steps=6 format=3 uid="uid://bwxsmx0r3ywho"]

[ext_resource type="Texture2D" uid="uid://c8yr2cyf6okdv" path="res://scenes/components/inventory/items/borderUI2.png" id="1_6n766"]
[ext_resource type="StyleBox" uid="uid://4eww5dc6esqg" path="res://assets/themes/white_black_border.tres" id="2_dryoy"]
[ext_resource type="Script" path="res://diebox_panel.gd" id="2_evm8a"]
[ext_resource type="PackedScene" uid="uid://d0p5gomrgwnoy" path="res://scenes/components/dice_box/die_box.tscn" id="3_norg6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wkadc"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("1_6n766")
texture_margin_left = 36.0
texture_margin_top = 36.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="DieboxPanel" type="PanelContainer"]
offset_right = 213.0
offset_bottom = 233.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_wkadc")
script = ExtResource("2_evm8a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="EnemyHPContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_dryoy")

[node name="EnemyHP" type="GridContainer" parent="VBoxContainer/EnemyHPContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(189, 172)
render_target_update_mode = 4

[node name="DieBox" parent="VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_norg6")]
unique_name_in_owner = true

[connection signal="result" from="VBoxContainer/SubViewportContainer/SubViewport/DieBox" to="." method="_on_die_box_result"]
[connection signal="side_hit" from="VBoxContainer/SubViewportContainer/SubViewport/DieBox" to="." method="_on_die_box_side_hit"]

[editable path="VBoxContainer/SubViewportContainer/SubViewport/DieBox"]
